--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build" : "tsup src/index.ts --format esm,cjs --dts",
-    "dev" : "tsup src/index.ts --format esm,cjs --dts --watch"
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@ignite-ui/tokens": "*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.2"
   }
