--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,9 @@
   "name": "react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
@@ -11,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ignite-ui/tokens": "*",
+    "@ignite-ui/react": "*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.2"
   }
